# super-tasty-pong

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
stpong/shader/: fragment.glsl  particleFrag.glsl  particleVert.glsl  simplestfrag.glsl  simplestfragorange.glsl  simplestvert.glsl  spriteVert.glsl
stpong/src/: Program.cpp  Program.hpp  main.cpp  program.cpp  program.hpp  settings.hpp  stpongConfig.hpp.in
stpong/src/IO/particle/: Particle.cpp  Particle.hpp  ParticleGenerator.cpp  ParticleGenerator.hpp
stpong/src/IO/shader/: Shader.cpp  Shader.hpp
stpong/src/IO/sprite/: SpriteRenderer.cpp  SpriteRenderer.hpp
stpong/src/IO/texture/: Texture.cpp  Texture.hpp  texture.cpp  texture.hpp
stpong/src/IO/transformation/: Transformations.cpp  Transformations.hpp
stpong/src/IO/window/: window.cpp  window.hpp  windowSettings.hpp
stpong/src/game/: Ball.cpp  Ball.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  collision.cpp  collision.hpp
stpong/src/service/fileloader/: fileloader.cpp  fileloader.hpp
stpong/src/service/number/: numberService.cpp  numberService.hpp
stpong/src/service/resource/: ResourceService.cpp  ResourceService.hpp
stpong/src/service/string/: string.cpp  string.hpp
stpong/src/shader/: Shader.cpp  Shader.hpp  SimplestShader.hpp
stpong/src/util/: util.cpp  util.hpp
stpong/src/window/: window.cpp  window.hpp  windowSettings.hpp
